[package]
name = "addon-common"
version = "0.1.0"
edition = "2021"

[features]
default = []
sqlx = ["dep:sqlx"]

[dependencies]
sqlx = { version = "0.8", optional = true }

axum = "0.7"

serde = { version = "1.0", features = ["derive"] }

log = "0.4"
thiserror = "1.0"
url = "2.5"
uuid = { version = "1.10", features = ["serde"] }
time = { version = "0.3", features = ["serde-human-readable", "macros"] }
