[package]
name = "webby-addon-common"
version = "0.1.0"
edition = "2021"
publish = ["tasty"]

[features]
default = []
sqlx = ["dep:sqlx", "webby-global-common/sqlx", "webby-api/sqlx"]

[dependencies]
webby-api = { version = "0.1.0", registry = "tasty" }
webby-global-common = { version = "0.1.0", registry = "tasty" }

sqlx = { version = "0.7", optional = true }

axum = "0.7"

serde = { version = "1.0", features = ["derive"] }
serde_qs = "0.13"
serde_json = "1.0"

eyre = "0.6"
log = "0.4"
thiserror = "2.0"
url = "2.5"
uuid = { version = "1.18", features = ["serde"] }
time = { version = "0.3", features = ["serde-human-readable", "macros"] }
reqwest = { version = "0.12", features = ["json"] }
